--- a/clone/src/TinderCards.css
+++ b/clone/src/TinderCards.css
@@ -5,7 +5,9 @@
     padding: 20px;
     max-width: 85vw;
     height: 50vh;
-    box-shadow: 0px 18px 53px 0px rgb(0, 0, 0.2);
+    /*box-shadow: 0px 18px 53px 0px rgb(0, 0, 0.2);*/
+    /*This property removes the cummulative effect on the cards*/
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
     border-radius: 20px;
     /* This fixes the images in the tinder cards*/
     background-size: cover;
